<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="205dp"
    android:layout_height="240dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_small"
    android:layout_marginHorizontal="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_xl"
    app:cardCornerRadius="@dimen/home_card_radius"
    android:elevation="@dimen/home_card_elevation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/trend_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/trends"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/trend_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="4dp"
            android:textSize="@dimen/tend_title_size"
            android:lines="2"
            android:textColor="#545454"
            />

        <TextView
            android:id="@+id/trend_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:layout_marginHorizontal="@dimen/margin_small"
            android:layout_marginTop="4dp"
            />
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>