<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark_blue"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/home_user_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_xl"
                        android:layout_marginTop="@dimen/margin_xl"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/user_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/hi_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_xl"
                        android:text="@string/hi_alex"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/home_user_img"
                        app:layout_constraintStart_toEndOf="@id/home_user_img"
                        app:layout_constraintTop_toTopOf="@id/home_user_img" />

                    <ImageView
                        android:id="@+id/notification_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_xl"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/notification"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/home_user_img" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_xl"
                    android:layout_marginTop="@dimen/margin_xl"
                    android:text="@string/find_your_favorites_here_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_xl"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/search_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/search_edit_height"
                    android:layout_marginHorizontal="@dimen/margin_xl"
                    android:layout_marginVertical="@dimen/margin_medium"
                    android:autofillHints=""
                    android:background="@drawable/edittext_background"
                    android:drawableStart="@drawable/search"
                    android:drawableEnd="@drawable/microphone"
                    android:drawablePadding="@dimen/margin_medium"
                    android:ems="10"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:padding="@dimen/margin_medium"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arc_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/card_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView


                        android:layout_width="@dimen/home_card_width"
                        android:layout_height="@dimen/home_card_height"

                        android:layout_margin="@dimen/home_card_margin"
                        android:elevation="@dimen/home_card_elevation"
                        app:cardCornerRadius="@dimen/home_card_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"


                            >

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="@dimen/card_img_size"
                                android:layout_height="@dimen/card_img_size"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/margin_medium"
                                android:background="@drawable/background_oval_2"

                                >


                                <ImageView
                                    android:id="@+id/card_favorite_img"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/favorites"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/card_favorite_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:text="Favorites" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/home_card_width"
                        android:layout_height="@dimen/home_card_height"

                        android:layout_margin="@dimen/home_card_margin"
                        android:elevation="@dimen/home_card_elevation"
                        app:cardCornerRadius="@dimen/home_card_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"


                            >

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="@dimen/card_img_size"
                                android:layout_height="@dimen/card_img_size"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/margin_medium"
                                android:background="@drawable/background_oval_2"

                                >


                                <ImageView
                                    android:id="@+id/card_msg_img"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/message"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/card_msg_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:text="Messages" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/home_card_width"
                        android:layout_height="@dimen/home_card_height"

                        android:layout_margin="@dimen/home_card_margin"
                        android:elevation="@dimen/home_card_elevation"
                        app:cardCornerRadius="@dimen/home_card_radius">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"


                            >

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="@dimen/card_img_size"
                                android:layout_height="@dimen/card_img_size"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/margin_medium"
                                android:background="@drawable/background_oval_2"

                                >


                                <ImageView
                                    android:id="@+id/card_social_img"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/social"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <TextView
                                android:id="@+id/card_social_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:text="Social" />
                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_layout">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/margin_xl"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/trend"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/text_size_medium"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/view_all_trend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/view_all"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/dark_blue"
                            android:textStyle="bold"

                            />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>